--- a/service-a/Dockerfile
+++ b/service-a/Dockerfile
@@ -2,7 +2,8 @@ FROM maven:3.9.9-eclipse-temurin-17 AS build
 WORKDIR /app
 COPY pom.xml .
 COPY src ./src
-RUN mvn -B clean package -DskipTests
+RUN mvn -B clean package spring-boot:repackage -DskipTests
+
 
 FROM eclipse-temurin:17-jre
 WORKDIR /app
